--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "serve": "http-server dist --port 9005",
     "build-serve": "npm run build && npm run serve",
     "lint": "npx eslint src/",
-    "lint:fix": "npx eslint src/ --fix"
+    "lint:fix": "npx eslint src/ --fix",
+    "tailwind": "npx tailwindcss -i ./src/styles/main.css -o ./src/styles/tailwind.css --watch"
   },
   "author": "",
   "license": "ISC",
