--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "workbox-webpack-plugin": "^7.0.0"
   },
   "dependencies": {
+    "aos": "^3.0.0-beta.6",
     "idb": "^7.1.1",
     "lazysizes": "^5.3.2",
     "regenerator-runtime": "^0.14.0",
