--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "scripts": {
     "start": "node server.js",
-    "start:dev": "nodemon cross-env server.js",
+    "start:dev": "nodemon server.js",
     "build": "cross-env NODE_ENV=production node server.js"
   },
   "name": "backend",
