--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start-dev": "webpack serve --config webpack.dev.js",
     "build": "webpack --config webpack.prod.js",
-    "serve": "http-server dist --port 9005",
+    "serve": "http-server dist --port 9005 --cors",
     "build-serve": "npm run build && npm run serve",
     "lint": "npx eslint src/",
     "lint:fix": "npx eslint src/ --fix",
@@ -17,7 +17,6 @@
   "devDependencies": {
     "@babel/core": "^7.23.2",
     "@babel/preset-env": "^7.23.2",
-    "@squoosh/lib": "^0.5.3",
     "alpinejs": "^3.13.3",
     "autoprefixer": "^10.4.16",
     "babel-loader": "^9.1.3",
@@ -41,7 +40,6 @@
     "sass-loader": "^13.3.2",
     "sharp": "^0.32.6",
     "style-loader": "^3.3.3",
-    "svgo": "^3.0.4",
     "tailwindcss": "^3.3.5",
     "terser-webpack-plugin": "^5.3.9",
     "webpack": "^5.89.0",
