--- a/package.json
+++ b/package.json
@@ -49,10 +49,11 @@
     "workbox-webpack-plugin": "^7.0.0"
   },
   "dependencies": {
-    "chart.js": "^4.4.0",
     "aos": "^3.0.0-beta.6",
+    "chart.js": "^4.4.0",
     "idb": "^7.1.1",
     "lazysizes": "^5.3.2",
+    "node-fetch": "^3.3.2",
     "regenerator-runtime": "^0.14.0",
     "sweetalert2": "^11.8.0",
     "workbox-window": "^7.0.0"
